# rust-tibber-shelly-bridge

./: .env_sample  Cargo.toml  README.md  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: rust.yml  sonarqube-scan.yml
src/: config.rs  main.rs  retry.rs
src/shelly/: client.rs  error.rs  types.rs
src/tibber/: client.rs  error.rs  types.rs
