[package]
name = "rust-tibber-shelly-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "macros", "time"] }
